# cs372.barkley

./: ConsoleApplication1.cpp
apps/Assignment 7/: Assignment 7.cpp  Assignment 7.h  CMakeLists.txt
apps/Assignment03/: CMakeLists.txt  cs372Stack.h
apps/Assignment04/: CMakeLists.txt  assignment4A.h
apps/Assignment5/: Assignment5.cpp  Assignment5.h  Assignment5Iterative.cpp  CMakeLists.txt
apps/Assignment5/Assignment5Iterative/: Assignment5Iterative.cpp  Assignment5Iterative.h  CMakeLists.txt
apps/Assignment8/: Assignment8.cpp  Assignment8.h  CMakeLists.txt  Tree.cpp  Tree.h  main2.cpp
apps/Assignment9/: Assignment9.cpp  Assignment9.h  CMakeLists.txt  problem1.cpp  problem2.cpp  todolist.txt
apps/AssignmentFour/: Assignment4-B.cpp  AssignmentFour.cpp  AssignmentFour.h  CMakeLists.txt  todolist.txt
apps/testbag/: CMakeLists.txt  UnitTestScriptTemplate.xlsx  testbag.cpp
include/: CMakeLists.txt
