# CMakeList.txt : CMake project for Assignment 7, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Assignment 7")

# Add source to this project's executable.
add_executable (CMakeTarget "Assignment 7.cpp" "Assignment 7.h")

# TODO: Add tests and install targets if needed.
