# CMakeList.txt : CMake project for Assignment04, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Assignment04")

# Add source to this project's executable.
add_executable (Assignment03 "Assignment04.cpp" "Assignment04.h")

# TODO: Add tests and install targets if needed.
