# CMakeList.txt : CMake project for Assignment5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Assignment5")

# Add source to this project's executable.
add_executable (Assignment5 "Assignment5.cpp" "Assignment5.h")

# TODO: Add tests and install targets if needed.
