# CMakeList.txt : CMake project for Assignment9, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Assignment9")

# Add source to this project's executable.
add_executable (Assignment9 "Assignment9.cpp" "Assignment9.h")

# TODO: Add tests and install targets if needed.
