# CMakeList.txt : CMake project for AssignmentFour, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AssignmentFour")

# Add source to this project's executable.
add_executable (AssignmentFour "AssignmentFour.cpp" "AssignmentFour.h")

# TODO: Add tests and install targets if needed.
