# CMakeList.txt : CMake project for Assignment5Iterative, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Assignment5Iterative")

# Add source to this project's executable.
add_executable (Assignment5Iterative "Assignment5Iterative.cpp" "Assignment5Iterative.h")

# TODO: Add tests and install targets if needed.
